# multi-ely

./: .gitignore  README.md  bench.ts  bun.lockb  package.json
actix/: Cargo.toml
actix/src/: main.rs
axum/: Cargo.toml
axum/src/: main.rs
axum/templates/: page.html
elysia/: README.md  bun.lockb  package.json  spawn.ts  tsconfig.json
elysia/src/: index.tsx
scripts/: body.json  body.lua  ely-wrk.sh  wrk.sh
