[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
chrono = "0.4.34"
lazy_static = "1.4.0"
serde = { version = "1.0.191", features = ["derive"] }
tera = "1.19.1"

[profile.release]
opt-level = 3
