[package]
name = "axum-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["json", "http1", "query"] }
axum-template = { version = "2.2.0", features = ["tera"] }
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
tera = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
opt-level = 3
